# SimJobFlow

./: .gitignore  CMakeLists.txt  README.md  config.h.in  decompressor
app/: CMakeLists.txt  batch_compute_competeness_ratio_greedy.cpp  compute_OPT.cpp  compute_competeness_ratio_greedy_fixed_input.cpp  compute_competeness_ratio_greedy_random_input.cpp
assets/config/: id_List_config0.json  id_List_config1.json  id_RT_config0.json  id_RT_config1.json  id_config0.json  id_config1.json  related_List_config0.json  related_List_config1.json  related_List_config2.json  related_RT_config0.json  related_RT_config1.json  related_config0.json  related_config1.json  related_config2.json  unrelated_List_config0.json  unrelated_List_config1.json  unrelated_List_config2.json  unrelated_RT_config0.json  unrelated_RT_config1.json  unrelated_config0.json  unrelated_config1.json  unrelated_config2.json
assets/images/: overview.drawio
assets/json/config/: related_config1.json  related_config2.json  related_config3.json  sample_config.json  sample_config1.json  sample_config2.json
assets/json/job/: normal_job1.json  normal_job2.json  normal_job3.json  normal_job4.json  sample_job.json  unrelated_job1.json  unrelated_job2.json  unrelated_job3.json
assets/results/: result.md
example/: example1.cpp
scripts/: env_start.sh  plot.py
src/ALG_solver/: ALGSolver.hpp
src/OPT_solver/: OPTSolver.hpp
src/competeness_ratio_calculator/: competeness_ratio_calculator.hpp
src/input_handler/: input_handler_trait.hpp  json_input_handler.hpp  random_input_handler.hpp
src/job/: job.hpp  normal_job.hpp  related_job.hpp  unrelated_job.hpp
src/machine/: identical_machine.hpp  indentical_machine.hpp  machine.hpp  related_machine.hpp  unrelated_machine.hpp
src/model/: model.hpp  model_trait.hpp
src/objective/: objective.hpp
src/output_handler/: file_output_handler.hpp  output_handler_trait.hpp  sim_output_handler.hpp
src/scheduler/: greedy_scheduler.hpp  not_supported_scheduler_type.hpp  schedule_step.hpp  scheduler_trait.hpp
src/scheduler/MR/: MR_scheduler.hpp  MR_scheduler_identical_list_arrival.hpp
src/scheduler/greedy/: greedy_scheduler.hpp  greedy_scheduler_identical.hpp  greedy_scheduler_identical_list_arrival.hpp  greedy_scheduler_identical_real_time_arrival.hpp  greedy_scheduler_related.hpp  greedy_scheduler_related_list_arrival.hpp  greedy_scheduler_related_real_time_arrival.hpp  greedy_scheduler_unrelated.hpp  greedy_scheduler_unrelated_list_arrival.hpp  greedy_scheduler_unrelated_real_time_arrival.hpp
src/simjobflow/: simjobflow.hpp
src/timer/: ticking_timer.hpp  tik_tok_timer.hpp  timer_trait.hpp
src/util/: basic_utils_in_one_header.hpp  json_parser.hpp  permutation_generator.hpp  print_utils.hpp
src/util/exception/: exceptions_in_one_header.hpp  implementation_exception.hpp  job_exception.hpp  machine_exception.hpp
src/util/job/: normal_job.hpp  unrelated_job.hpp
src/util/machine/: identical_machine.hpp  machine.hpp  related_machine.hpp  unrelated_machine.hpp
src/util/model/: model.hpp  model_trait.hpp
test/: CMakeLists.txt
test/integration_tests/: CMakeLists.txt  greedy_identical_test.cpp  greedy_related_test.cpp  greedy_unrelated_test.cpp  integration_test.cpp
test/unit_tests/: CMakeLists.txt
test/unit_tests/input_handler_test/: CMakeLists.txt  json_input_handler_test.cpp  random_input_handler_test.cpp
test/unit_tests/scheduler_test/: greedy_scheduler_test.cpp
test/unit_tests/util_test/: CMakeLists.txt  permutation_generator_test.cpp
